# xfinance

./: README.md  package-lock.json  package.json  t.csv  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: index.html
src/: App.css  App.tsx  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  pdf_processor.rs  state.rs
src/components/: AuthForms.tsx  Header.tsx  Layout.tsx
src/components/ui/: alert.tsx
src/hooks/: useAuth.tsx  useSpike.ts
src/pages/: Admin.tsx  Dashboard.tsx  Settings.tsx  StatementUpload.tsx
src/types/: statement.ts
